--- a/Model Check.ipynb
+++ b/Model Check.ipynb
@@ -42,15 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2566e0bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 135,
    "id": "08fce91a",
    "metadata": {},
    "outputs": [
@@ -60,7 +52,7 @@
        "'c:\\\\Users\\\\Mohammad\\\\Desktop\\\\Hands-On Projects\\\\Recommendation System\\\\Session-Based Sequential Recommender (GRU4Rec  Transformer)'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,8 +1499,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e275790f",
+   "id": "579dde6a",
    "metadata": {},
+   "source": [
+    "Change Model Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79ac7567",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
