Add Readme File

--- a/Model Check.ipynb
+++ b/Model Check.ipynb
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "id": "e4ebddab",
    "metadata": {},
    "outputs": [
@@ -2225,12 +2225,12 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.4)\n",
     "plt.show()\n",
     "\n",
-    "plt.figure(figsize=(10,6))\n",
-    "sns.lineplot(data=DF_RESULTS[[\"R@20\", \"MRR@20\"]], marker=\"o\")\n",
-    "plt.title(\"Trend of Model Improvements\")\n",
-    "plt.ylabel(\"Score\")\n",
-    "plt.grid(True, linestyle=\"--\", alpha=0.3)\n",
-    "plt.show()\n",
+    "# plt.figure(figsize=(10,6))\n",
+    "# sns.lineplot(data=DF_RESULTS[[\"R@20\", \"MRR@20\"]], marker=\"o\")\n",
+    "# plt.title(\"Trend of Model Improvements\")\n",
+    "# plt.ylabel(\"Score\")\n",
+    "# plt.grid(True, linestyle=\"--\", alpha=0.3)\n",
+    "# plt.show()\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
     "x = range(len(DF_RESULTS))\n",
